@@ -101,10 +101,7 @@
     <properties>
         <linkis.version>1.1.0</linkis.version>
         <hadoop.version>2.7.2</hadoop.version>
-        <spring.eureka.version>2.2.1.RELEASE</spring.eureka.version>
-        <spring.feign.version>2.2.1.RELEASE</spring.feign.version>
         <spring.boot.version>2.3.2.RELEASE</spring.boot.version>
-        <spring.cloud.version>2.2.1.RELEASE</spring.cloud.version>
         <guava.version>30.0-jre</guava.version>
         <gson.version>2.8.5</gson.version>
         <fasterxml.jackson.version>2.11.3</fasterxml.jackson.version>
@@ -123,8 +120,6 @@
         <knife4j.version>2.0.9</knife4j.version>
         <maven.version>3.3.3</maven.version>
         <xstream.core.version>1.4.19</xstream.core.version>
-        <spring.version>5.2.15.RELEASE</spring.version>
-        <spring.security.cryto.version>5.4.4</spring.security.cryto.version>
         <reflections.version>0.9.10</reflections.version>
         <mybatis-plus.boot.starter.version>3.4.1</mybatis-plus.boot.starter.version>
         <mysql.connector.version>5.1.49</mysql.connector.version>
@@ -132,6 +127,7 @@
         <javassist.version>3.19.0-GA</javassist.version>
         <commons-collections.version>3.2.2</commons-collections.version>
         <commons-lang.version>2.6</commons-lang.version>
+        <commons-lang3.version>3.9</commons-lang3.version>
         <commons-io.version>2.11.0</commons-io.version>
         <druid.version>1.1.22</druid.version>
         <apache-rat-plugin.version>0.13</apache-rat-plugin.version>
@@ -252,6 +248,14 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>Hoxton.SR10</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
@@ -262,10 +266,9 @@
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
-
        <dependency>
-           <groupId>org.junit.vintage</groupId>
-           <artifactId>junit-vintage-engine</artifactId>
+           <groupId>org.junit.platform</groupId>
+           <artifactId>junit-platform-launcher</artifactId>
            <scope>test</scope>
        </dependency>
 
@@ -636,6 +639,17 @@
                         </execution>
                     </executions>
                 </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <configuration>
+                        <forkCount>3</forkCount>
+                        <reuseForks>true</reuseForks>
+                        <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                    </configuration>
+                </plugin>
+
             </plugins>
         </pluginManagement>
     </build>
